# small-tools

./: README.md
ezip/: README.md  ezip
github_get/: README.md  github_get
image_gen/: .env.example  .gitignore  README.md  image_gen.py  pyproject.toml
image_gen/image_gen_rs/: .env.example  .gitignore  Cargo.toml  README.md
image_gen/image_gen_rs/src/: main.rs
list_tools/: .env.example  .gitignore  README.md  main.py  pyproject.toml
list_tools/spec/: 0001.md
load_env/: Cargo.toml  README.md
load_env/specs/: 0001-prd.md
load_env/src/: main.rs
translate/: .env.example  Cargo.toml  README.md
translate/spec/: 0001-prd.md
translate/src/: main.rs
