[package]
name = "translate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
