[package]
name = "image_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.46", features = ["derive"] }
md5 = "0.8.0"
dotenv = "0.15.0"
