[package]
name = "image_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"] }
md5 = "0.8.0"
dotenvy = "0.15.7"
confy = "2.0.0"
notify-rust = "4.12.0"
